--- a/app/src/main/res/layout/win_dialog_layout.xml
+++ b/app/src/main/res/layout/win_dialog_layout.xml
@@ -23,6 +23,22 @@
             android:text="Message Here"
             />
 
+        <TextView
+            android:id="@+id/scoreTxt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="20dp"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:text="Message Here"
+            />
+
+
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/startAgainBtn"
             android:layout_width="match_parent"
